# ap-coursework-1

./: CMakeLists.txt  README.md  main.cpp  run_simulation.sh
data/: Earth_orbitalPath.txt  Jupyter_orbitalPath.txt  Sun_orbitalPath.txt
headers/: CelestialBody.hpp  JovianPlanet.hpp  Matrix.hpp  Planet.hpp  SolarSystem.hpp  Star.hpp  TerrestrialPlanet.hpp  Vector3D.hpp  vector3D.hpp
python/: main.py  utils.py
src/: CelestialBody.cpp  JovianPlanet.cpp  Matrix.cpp  Planet.cpp  SolarSystem.cpp  Star.cpp  TerrestrialPlanet.cpp  Vector3D.cpp  vector3D.cpp
